Grace/tests/gibbs/errors/t189.grace
// ERROR = P1002
import "StandardPrelude" StandardPrelude
